--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ country: United-Kingdom
 humandate: Feb 16-17, 2016
 startdate: 2016-02-16
 enddate: 2016-02-17
-latlng: 55.921706, -3.1777424
+latlng: 55.9216414, -3.1738225
 registration: open
 instructor: ["Emmanouil (Manos) Farsarakis","TBC"]
 helper: ["TBC"]
