Replaced testing with SQL (initial)
Need to change setup info and check for remaining testing references etc.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ registration: open
 instructor: ["Emmanouil (Manos) Farsarakis","TBC"]
 helper: ["TBC"]
 contact: support@archer.ac.uk
-lessons: ['Git', 'Python', 'Make', 'Best practices for scientific computing', 'Testing']
+lessons: ['Git', 'Python', 'Make', 'Best practices for scientific computing', 'Databases and SQL']
 ---
 
 <h2>General Information</h2>
@@ -141,9 +141,9 @@ href="https://hackpad.com/ARCHER-SWC-EPCC-Feb2016-p93Xj6LacO2">this page</a>.
       <tr> <td><em>10:30</em></td> <td><em>Coffee break</em></td> </tr>
       <tr> <td>11:00</td> <td>Automating tasks with Make</td> </tr>
       <tr> <td>12:00</td> <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td> <td>How (and how much) to test programs</td> </tr>
+      <tr> <td>13:00</td> <td>Databases and SQL</td> </tr>
       <tr> <td><em>14:30</em></td> <td><em>Coffee break</em></td> </tr>
-      <tr> <td>15:00</td> <td>How (and how much) to test programs</td> </tr>
+      <tr> <td>15:00</td> <td>Databases and SQL</td> </tr>
       <tr> <td>16:00</td> <td>Best practices for scientific computing</td> </tr>
       <tr> <td>17:00</td> <td>Close</td> </tr>
     </table>
@@ -196,14 +196,19 @@ href="https://hackpad.com/ARCHER-SWC-EPCC-Feb2016-p93Xj6LacO2">this page</a>.
     </ul>
   </div>
   <div class="span6">
-    <h3>How (and how much) to test programs</h3>
+    <h3>Databases and SQL</h3>
     <ul>
-      <li>Can I do testing?</li>
-      <li>Big Tests and Little Tests</li>
-      <li>End to End</li>
-      <li>Unit Testing</li>
-      <li>Putting Tests Together</li>
-      <li><a href="novice/testing/index.html">Reference...</a></li>
+      <li>Selecting Data</li>
+      <li>Sorting and Removing Duplicates</li>
+      <li>Filtering</li>
+      <li>Calculating New Values</li>
+      <li>Missing Data</li>
+      <li>Aggregation</li>
+      <li>Combining Data</li>
+      <li>Data Hygiene</li>
+      <li>Creating and Modifying Data</li>
+      <li>Programming with Databases</li>
+      <li><a href="http://swcarpentry.github.io/sql-novice-survey/reference.html">Reference...</a></li>
      </ul>
   </div>
 </div>
@@ -284,7 +289,7 @@ Software Carpentry online lessons:
 <li><a href="novice/python/index.html">Programming with Python</a></li>
 <li><a href="intermediate/make/">Automating tasks with make</a></li>
 <li><a href="http://software-carpentry.org/v4/make/index.html">Make</a> (v4)</li>
-<li><a href="http://software-carpentry.org/v4/test/index.html">Testing</a> (v4)</li>
+<li><a href="http://swcarpentry.github.io/sql-novice-survey/">Testing</a> (v4)</li>
 </ul>
 <p>
 Git:
