Removed final "testing" references.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ lessons: ['Git', 'Python', 'Make', 'Best practices for scientific computing', 'D
   workshops help researchers become more productive by teaching software
   development skills that enable more to be done, in less time, and with
   less pain. We will cover skills including version control, task
-  automation, good programming practice and automated testing. These are
+  automation, good programming practice and relational databases. These are
   skills that, in an ideal world, researchers would master before
   tackling anything with "cloud" or "peta" or "HPC" in their name, skills
   that enable researchers to optimise their time and provide them with a
@@ -289,7 +289,7 @@ Software Carpentry online lessons:
 <li><a href="novice/python/index.html">Programming with Python</a></li>
 <li><a href="intermediate/make/">Automating tasks with make</a></li>
 <li><a href="http://software-carpentry.org/v4/make/index.html">Make</a> (v4)</li>
-<li><a href="http://swcarpentry.github.io/sql-novice-survey/">Testing</a> (v4)</li>
+<li><a href="http://swcarpentry.github.io/sql-novice-survey/">Databases and SQL</a> tes</li>
 </ul>
 <p>
 Git:
