--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ Software Carpentry online lessons:
 <li><a href="novice/python/index.html">Programming with Python</a></li>
 <li><a href="intermediate/make/">Automating tasks with make</a></li>
 <li><a href="http://software-carpentry.org/v4/make/index.html">Make</a> (v4)</li>
-<li><a href="http://swcarpentry.github.io/sql-novice-survey/">Databases and SQL</a> tes</li>
+<li><a href="http://swcarpentry.github.io/sql-novice-survey/">Databases and SQL</a></li>
 </ul>
 <p>
 Git:
