--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@ href="https://hackpad.com/ARCHER-SWC-EPCC-Feb2016-p93Xj6LacO2">this page</a>.
   <div class="span6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td> <td>Automating tasks with Make</td> </tr>
+      <tr> <td>09:00</td> <td>Building programs with Python</td> </tr>
       <tr> <td><em>10:30</em></td> <td><em>Coffee break</em></td> </tr>
-      <tr> <td>11:00</td> <td>Automating tasks with Make</td> </tr>
+      <tr> <td>11:00</td> <td>Building programs with Python</td> </tr>
       <tr> <td>12:00</td> <td>Lunch break</td> </tr>
       <tr> <td>13:00</td> <td>Databases and SQL</td> </tr>
       <tr> <td><em>14:30</em></td> <td><em>Coffee break</em></td> </tr>
