"Python" replaced by "Python 2.7" references

--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@ href="https://hackpad.com/ARCHER-SWC-EPCC-Feb2016-p93Xj6LacO2">this page</a>.
   <div class="span6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td> <td>Building programs with Python</td> </tr>
+      <tr> <td>09:00</td> <td>Building programs with Python 2.7</td> </tr>
       <tr> <td><em>10:30</em></td> <td><em>Coffee break</em></td> </tr>
-      <tr> <td>11:00</td> <td>Building programs with Python</td> </tr>
+      <tr> <td>11:00</td> <td>Building programs with Python 2.7</td> </tr>
       <tr> <td>12:00</td> <td>Lunch break</td> </tr>
       <tr> <td>13:00</td> <td>Databases and SQL</td> </tr>
       <tr> <td><em>14:30</em></td> <td><em>Coffee break</em></td> </tr>
@@ -169,7 +169,7 @@ href="https://hackpad.com/ARCHER-SWC-EPCC-Feb2016-p93Xj6LacO2">this page</a>.
     </ul>
   </div>
   <div class="span6">
-    <h3>Building programs with Python</h3>
+    <h3>Building programs with Python 2.7</h3>
     <ul>
       <li>Using libraries</li>
       <li>Working with arrays</li>
@@ -235,7 +235,7 @@ href="https://hackpad.com/ARCHER-SWC-EPCC-Feb2016-p93Xj6LacO2">this page</a>.
 <h2>Check your setup</h2>
 
 <p>
-  To check you have the correct version of Python:
+  To check you have the correct version of Python (2.7):
 </p>
 <ul>
   <li>
