--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ registration: open
 instructor: ["Emmanouil (Manos) Farsarakis","TBC"]
 helper: ["TBC"]
 contact: support@archer.ac.uk
-lessons: ['Git', 'Python', 'Make', 'Best practices for scientific computing', 'Databases and SQL']
+lessons: ['Git', 'Python', 'Make', 'Best practices for scientific computing', 'Data Management with SQL']
 ---
 
 <h2>General Information</h2>
@@ -141,9 +141,9 @@ href="https://hackpad.com/ARCHER-SWC-EPCC-Feb2016-p93Xj6LacO2">this page</a>.
       <tr> <td><em>10:30</em></td> <td><em>Coffee break</em></td> </tr>
       <tr> <td>11:00</td> <td>Building programs with Python 2.7</td> </tr>
       <tr> <td>12:00</td> <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td> <td>Databases and SQL</td> </tr>
+      <tr> <td>13:00</td> <td>Data Management with SQL</td> </tr>
       <tr> <td><em>14:30</em></td> <td><em>Coffee break</em></td> </tr>
-      <tr> <td>15:00</td> <td>Databases and SQL</td> </tr>
+      <tr> <td>15:00</td> <td>Data Management with SQL</td> </tr>
       <tr> <td>16:00</td> <td>Best practices for scientific computing</td> </tr>
       <tr> <td>17:00</td> <td>Close</td> </tr>
     </table>
@@ -196,19 +196,13 @@ href="https://hackpad.com/ARCHER-SWC-EPCC-Feb2016-p93Xj6LacO2">this page</a>.
     </ul>
   </div>
   <div class="span6">
-    <h3>Databases and SQL</h3>
+    <h3>Data Management with SQL</h3>
     <ul>
-      <li>Selecting Data</li>
-      <li>Sorting and Removing Duplicates</li>
-      <li>Filtering</li>
-      <li>Calculating New Values</li>
-      <li>Missing Data</li>
+      <li>Introduction to SQL</li>
+      <li>Basic Queries</li>
       <li>Aggregation</li>
-      <li>Combining Data</li>
-      <li>Data Hygiene</li>
-      <li>Creating and Modifying Data</li>
-      <li>Programming with Databases</li>
-      <li><a href="http://swcarpentry.github.io/sql-novice-survey/reference.html">Reference...</a></li>
+      <li>Joins and aliases</li>
+      <li><a href="http://www.datacarpentry.org/sql-ecology/">Reference...</a></li>
      </ul>
   </div>
 </div>
