--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ href="https://hackpad.com/ARCHER-SWC-EPCC-Feb2016-p93Xj6LacO2">this page</a>.
       <li>Resolving conflicts</li>
       <li>Open licenses</li>
       <li>Where to host work, and why</li>
-      <li><a href="novice/ref/02-git.html">Reference...</a></li>
+      <li><a href="http://hpcarcher.github.io/git-novice/">Reference...</a></li>
     </ul>
   </div>
   <div class="span6">
@@ -178,7 +178,7 @@ href="https://hackpad.com/ARCHER-SWC-EPCC-Feb2016-p93Xj6LacO2">this page</a>.
       <li>Loops and conditionals: <code>for</code>, <code>if</code>, <code>else</code>, ...</li>
       <li>Defensive programming</li>
       <li>Using Python from the command line</li>
-      <li><a href="novice/ref/03-python.html">Reference...</a></li>
+      <li><a href="http://swcarpentry.github.io/python-novice-inflammation/">Reference...</a></li>
     </ul>
   </div>
 </div>
@@ -192,7 +192,7 @@ href="https://hackpad.com/ARCHER-SWC-EPCC-Feb2016-p93Xj6LacO2">this page</a>.
       <li>Automatic Variables and Wildcards</li>
       <li>Patterns</li>
       <li>Variables</li>
-      <li><a href="intermediate/make/reference.html">Reference...</a></li>
+      <li><a href="http://swcarpentry.github.io/make-novice/">Reference...</a></li>
     </ul>
   </div>
   <div class="span6">
@@ -279,10 +279,9 @@ Attendee <a href="https://github.com/hpcarcher/2016-02-16-EPCC-students">slides,
 Software Carpentry online lessons:
 </p>
 <ul>
-<li><a href="novice/git/index.html">Version Control with Git</a></li>
-<li><a href="novice/python/index.html">Programming with Python</a></li>
-<li><a href="intermediate/make/">Automating tasks with make</a></li>
-<li><a href="http://software-carpentry.org/v4/make/index.html">Make</a> (v4)</li>
+<li><a href="http://swcarpentry.github.io/git-novice/">Version Control with Git</a></li>
+<li><a href="http://swcarpentry.github.io/python-novice-inflammation/">Programming with Python</a></li>
+<li><a href="http://swcarpentry.github.io/make-novice/">Automating tasks with make</a></li>
 <li><a href="http://swcarpentry.github.io/sql-novice-survey/">Databases and SQL</a></li>
 </ul>
 <p>
