Added names for all instructors and some helpers

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ startdate: 2016-02-16
 enddate: 2016-02-17
 latlng: 55.9216414, -3.1738225
 registration: open
-instructor: ["Emmanouil (Manos) Farsarakis","TBC"]
-helper: ["TBC"]
+instructor: ["Emmanouil (Manos) Farsarakis","Mario Antonioletti", "Kevin Stratford", "Ioanna Lampaki"]
+helper: ["Fiona Reid", "TBC"]
 contact: support@archer.ac.uk
 lessons: ['Git', 'Python', 'Make', 'Best practices for scientific computing', 'Data Management with SQL']
 ---
