Added pre- and post- surveys

--- a/index.html
+++ b/index.html
@@ -114,6 +114,11 @@ href="https://hackpad.com/ARCHER-SWC-EPCC-Feb2016-p93Xj6LacO2">this page</a>.
 </p>
 
 
+<h2><em>Surveys</em></h2>
+<p>Please be sure to complete these surveys before and after the workshop.</p>
+<p><a href='https://www.surveymonkey.com/r/swc_pre_workshop_v1?workshop_id=2016-02-16-EPCC'>Pre-workshop Survey</a></p>
+<p><a href='https://www.surveymonkey.com/r/swc_post_workshop_v1?workshop_id=2016-02-16-EPCC'>Post-workshop Survey</a></p>
+
 
 <hr/>
 
