--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ enddate: 2016-02-17
 latlng: 55.9216414, -3.1738225
 registration: open
 instructor: ["Emmanouil (Manos) Farsarakis","Mario Antonioletti", "Kevin Stratford", "Ioanna Lampaki"]
-helper: ["Clair Barrass","Fiona Reid", "Juan Rodriguez Herrera", "TBC"]
+helper: ["Clair Barrass", "Fiona Reid", "Juan Rodriguez Herrera", "Rupert Nash", "Neil Chue Hong"]
 contact: support@archer.ac.uk
 lessons: ['Git', 'Python', 'Make', 'Best practices for scientific computing', 'Data Management with SQL']
 ---
