--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 ---
 layout: workshop
 root: .
-venue: University of Edinburgh (EPCC)
-address: University of Edinburgh, Room 1026c, James Clerk Maxwell Building, King's Buildings, Peter Guthrie Tait Road, Edinburgh, EH9 3FD
+venue: Imperial College London
+address: Imperial College London, Room TBC, TBC
 country: United-Kingdom
-humandate: Feb 16-17, 2016
-startdate: 2016-02-16
-enddate: 2016-02-17
+humandate: Mar 23-24, 2016
+startdate: 2016-03-23
+enddate: 2016-03-24
 latlng: 55.9216414, -3.1738225
 registration: open
-instructor: ["Emmanouil (Manos) Farsarakis","Mario Antonioletti", "Kevin Stratford", "Ioanna Lampaki"]
-helper: ["Clair Barrass", "Fiona Reid", "Juan Rodriguez Herrera", "Rupert Nash", "Neil Chue Hong", "Mike Jackson"]
+instructor: ["Emmanouil (Manos) Farsarakis","TBC"]
+helper: ["TBC"]
 contact: support@archer.ac.uk
 lessons: ['Git', 'Python', 'Make', 'Best practices for scientific computing', 'Data Management with SQL']
 ---
@@ -115,8 +115,8 @@ href="https://hackpad.com/ARCHER-SWC-EPCC-Feb2016-p93Xj6LacO2">this page</a>.
 
 <h2><em>Surveys</em></h2>
 <p>Please be sure to complete these surveys before and after the workshop.</p>
-<p><a href='https://www.surveymonkey.com/r/swc_pre_workshop_v1?workshop_id=2016-02-16-EPCC'>Pre-workshop Survey</a></p>
-<p><a href='https://www.surveymonkey.com/r/swc_post_workshop_v1?workshop_id=2016-02-16-EPCC'>Post-workshop Survey</a></p>
+<p><a href='https://www.surveymonkey.com/r/swc_pre_workshop_v1?workshop_id=2016-03-23-Imperial'>Pre-workshop Survey</a></p>
+<p><a href='https://www.surveymonkey.com/r/swc_post_workshop_v1?workshop_id=2016-03-23-Imperial'>Post-workshop Survey</a></p>
 
 
 <hr/>
@@ -276,7 +276,7 @@ Course materials:
 </p>
 <ul>
 <li>
-Attendee <a href="https://github.com/hpcarcher/2016-02-16-EPCC-students">slides, sample code and scripts</a>
+Attendee <a href="https://github.com/hpcarcher/2016-03-23-students">slides, sample code and scripts</a>
 </li>
 </ul>
 <p>
