Fixed location details and hackpad link

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 layout: workshop
 root: .
 venue: Imperial College London
-address: Imperial College London, Room TBC, TBC
+address: Imperial College London, ICT Training Room, 204 Central Library Sherfield Building, Exhibition Road, South Kensington, London, SW7 2AZ
 country: United-Kingdom
 humandate: Mar 23-24, 2016
 startdate: 2016-03-23
 enddate: 2016-03-24
-latlng: 55.9216414, -3.1738225
+latlng: 51.4988,-0.174877
 registration: open
 instructor: ["Emmanouil (Manos) Farsarakis","TBC"]
 helper: ["TBC"]
@@ -69,6 +69,8 @@ lessons: ['Git', 'Python', 'Make', 'Best practices for scientific computing', 'D
   <a href="//www.openstreetmap.org/?mlat={{page.latlng | replace:',','&mlon='}}&zoom=16">OpenStreetMap</a>
   or
   <a href="//maps.google.com/maps?q={{page.latlng}}">Google Maps</a>.
+<li><a href="http://www3.imperial.ac.uk/portal/page/portallive/3F83FE8FD0480636E0440003BACD17D6">Click here</a> for information on getting here and maps of the South Kensington campus and area. </li>
+  <li>Information about the accessibility of the South Kensington Campus is available online through the <a href="http://www.disabledgo.com/en/org-results/imperial-college-london/uni-libraries">DisabledGo access guides</a></li>
 </p>
 {% endif %}
 
@@ -109,7 +111,7 @@ href="http://www.archer.ac.uk/training/">ARCHER training page</a>.
 <p>
 During the workshop we will be using a Hackpad to share information.
 Please take note of <a
-href="https://hackpad.com/ARCHER-SWC-EPCC-Feb2016-p93Xj6LacO2">this page</a>.
+href="http://tinyurl.com/j3ahd2d">this page</a>.
 </p>
 
 
