Fixed link to SQL lessons

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ href="http://tinyurl.com/j3ahd2d">this page</a>.
       <li>Basic Queries</li>
       <li>Aggregation</li>
       <li>Joins and aliases</li>
-      <li><a href="http://www.datacarpentry.org/sql-ecology/">Reference...</a></li>
+      <li><a href="http://www.datacarpentry.org/sql-ecology-lesson/">Reference...</a></li>
      </ul>
   </div>
 </div>
