--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ enddate: 2016-03-24
 latlng: 51.4988,-0.174877
 registration: open
 instructor: ["Emmanouil (Manos) Farsarakis","Robert Beagrie"]
-helper: ["TBC"]
+helper: ["Katerina Michalickova", "Alexandra Simperler"]
 contact: support@archer.ac.uk
 lessons: ['Git', 'Python', 'Make', 'Best practices for scientific computing', 'Data Management with SQL']
 ---
