Changed loc to Belfast and dates.

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 ---
 layout: workshop
 root: .
-venue: Imperial College London
-address: Imperial College London, ICT Training Room, 204 Central Library Sherfield Building, Exhibition Road, South Kensington, London, SW7 2AZ
+venue: Queen's University Belfast
+address: Queen's University Belfast (Room TBD)
 country: United-Kingdom
-humandate: Mar 23-24, 2016
-startdate: 2016-03-23
-enddate: 2016-03-24
-latlng: 51.4988,-0.174877
+humandate: Jun 09-10, 2016
+startdate: 2016-06-09
+enddate: 2016-06-10
+latlng: 54.5844087,-5.9340494
 registration: open
-instructor: ["Emmanouil (Manos) Farsarakis","Robert Beagrie"]
-helper: ["Katerina Michalickova", "Alexandra Simperler"]
+instructor: ["Emmanouil (Manos) Farsarakis","TBD"]
+helper: ["TBD", "TBD"]
 contact: support@archer.ac.uk
 lessons: ['Git', 'Python', 'Make', 'Best practices for scientific computing', 'Data Management with SQL']
 ---
@@ -37,9 +37,8 @@ lessons: ['Git', 'Python', 'Make', 'Best practices for scientific computing', 'D
 <p>
   This workshop is being run by <a
   href="http://www.epcc.ed.ac.uk">EPCC</a>, as part of ARCHER. The
-  workshop is in collaboration with EPCC's <a
-  href="http://www.prace-project.eu/PRACE-Advanced-Training-Centres">PRACE
-  Advanced Training Centre</a> (PATC), and 
+  workshop is in collaboration with <a
+  href="http://www.epcc.ed.ac.uk">EPCC</a> and 
   <a href="http://www.software-carpentry.org/">Software Carpentry</a>.
 </p>
 
@@ -69,8 +68,8 @@ lessons: ['Git', 'Python', 'Make', 'Best practices for scientific computing', 'D
   <a href="//www.openstreetmap.org/?mlat={{page.latlng | replace:',','&mlon='}}&zoom=16">OpenStreetMap</a>
   or
   <a href="//maps.google.com/maps?q={{page.latlng}}">Google Maps</a>.
-<li><a href="http://www3.imperial.ac.uk/portal/page/portallive/3F83FE8FD0480636E0440003BACD17D6">Click here</a> for information on getting here and maps of the South Kensington campus and area. </li>
-  <li>Information about the accessibility of the South Kensington Campus is available online through the <a href="http://www.disabledgo.com/en/org-results/imperial-college-london/uni-libraries">DisabledGo access guides</a></li>
+<li><a href="http://www.qub.ac.uk/home/StudyatQueens/LifeinBelfast/campusmapandtravel/">Click here</a> for information on getting here and maps of Queen's University Belfast campus and area. </li>
+  <li>Information about the accessibility of Queen's University Belfast is available online through the <a href="http://www.disabledgo.com/access-guide/belfast-city-council/queens-university">DisabledGo access guides</a></li>
 </p>
 {% endif %}
 
@@ -117,8 +116,8 @@ href="http://tinyurl.com/j3ahd2d">this page</a>.
 
 <h2><em>Surveys</em></h2>
 <p>Please be sure to complete these surveys before and after the workshop.</p>
-<p><a href='https://www.surveymonkey.com/r/swc_pre_workshop_v1?workshop_id=2016-03-23-Imperial'>Pre-workshop Survey</a></p>
-<p><a href='https://www.surveymonkey.com/r/swc_post_workshop_v1?workshop_id=2016-03-23-Imperial'>Post-workshop Survey</a></p>
+<p><a href='https://www.surveymonkey.com/r/swc_pre_workshop_v1?workshop_id=2016-06-09-Belfast'>Pre-workshop Survey</a></p>
+<p><a href='https://www.surveymonkey.com/r/swc_post_workshop_v1?workshop_id=2016-06-09-Belfast'>Post-workshop Survey</a></p>
 
 
 <hr/>
