Generic hackpad link

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ href="http://www.archer.ac.uk/training/">ARCHER training page</a>.
 <p>
 During the workshop we will be using a Hackpad to share information.
 Please take note of <a
-href="http://tinyurl.com/j3ahd2d">this page</a>.
+href="https://hackpad.com/">this page</a>.
 </p>
 
 
