--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 layout: workshop
 root: .
 venue: Queen's University Belfast
-address: Queen's University Belfast (Room TBD)
+address: Teaching Room 1, Medical Biology Centre (Teaching Centre), Queen's University Belfast
 country: United-Kingdom
 humandate: Jun 09-10, 2016
 startdate: 2016-06-09
 enddate: 2016-06-10
-latlng: 54.5844087,-5.9340494
+latlng: 54.5857013,-5.9444726,17
 registration: open
 instructor: ["Emmanouil (Manos) Farsarakis","TBD"]
 helper: ["TBD", "TBD"]
@@ -68,7 +68,7 @@ lessons: ['Git', 'Python', 'Make', 'Best practices for scientific computing', 'D
   <a href="//www.openstreetmap.org/?mlat={{page.latlng | replace:',','&mlon='}}&zoom=16">OpenStreetMap</a>
   or
   <a href="//maps.google.com/maps?q={{page.latlng}}">Google Maps</a>.
-<li><a href="http://www.qub.ac.uk/home/StudyatQueens/LifeinBelfast/campusmapandtravel/">Click here</a> for information on getting here and maps of Queen's University Belfast campus and area. </li>
+<li>The location of the workshop can be found on Building 22 on <a href="titus.phy.qub.ac.uk/docs/qubmap.pdf">this map</a>.</li>
   <li>Information about the accessibility of Queen's University Belfast is available online through the <a href="http://www.disabledgo.com/access-guide/belfast-city-council/queens-university">DisabledGo access guides</a></li>
 </p>
 {% endif %}
@@ -110,7 +110,7 @@ href="http://www.archer.ac.uk/training/">ARCHER training page</a>.
 <p>
 During the workshop we will be using a Hackpad to share information.
 Please take note of <a
-href="https://hackpad.com/">this page</a>.
+href="https://hackpad.com/">this page (link to be updated closer to the workshop)</a>.
 </p>
 
 
@@ -118,8 +118,6 @@ href="https://hackpad.com/">this page</a>.
 <p>Please be sure to complete these surveys before and after the workshop.</p>
 <p><a href='https://www.surveymonkey.com/r/swc_pre_workshop_v1?workshop_id=2016-06-09-Belfast'>Pre-workshop Survey</a></p>
 <p><a href='https://www.surveymonkey.com/r/swc_post_workshop_v1?workshop_id=2016-06-09-Belfast'>Post-workshop Survey</a></p>
-
-
 <hr/>
 
 <h2>Schedule</h2>
