--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ startdate: 2016-06-09
 enddate: 2016-06-10
 latlng: 54.5857013,-5.9444726,17
 registration: open
-instructor: ["Emmanouil (Manos) Farsarakis","TBD"]
+instructor: ["Emmanouil (Manos) Farsarakis","Adrian Jackson"]
 helper: ["TBD", "TBD"]
 contact: support@archer.ac.uk
 lessons: ['Git', 'Python', 'Make', 'Best practices for scientific computing', 'Data Management with SQL']
