Updated helpers list

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ enddate: 2016-06-10
 latlng: 54.5857013,-5.9444726,17
 registration: open
 instructor: ["Emmanouil (Manos) Farsarakis","Adrian Jackson"]
-helper: ["Dr Carles Triguero" , "Dr Gabriel Greene-Diniz" , "Dr. Sibasish Laha"]
+helper: ["Dr Carles Triguero" , "Dr Gabriel Greene-Diniz" , "Dr Sibasish Laha", "Dr Karen Cairns", "Dr Heather Cegla"]
 contact: support@archer.ac.uk
 lessons: ['Git', 'Python', 'Make', 'Best practices for scientific computing', 'Data Management with SQL']
 ---
