Added hackpad link

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ href="http://www.archer.ac.uk/training/">ARCHER training page</a>.
 <p>
 During the workshop we will be using a Hackpad to share information.
 Please take note of <a
-href="https://hackpad.com/">this page (link to be updated closer to the workshop)</a>.
+href="https://hackpad.com/ARCHER-SWC-Belfast-2016-PIKLfZG0cW4">this page</a>.
 </p>
 
 
