--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@ href="https://hackpad.com/ARCHER-SWC-Belfast-2016-PIKLfZG0cW4">this page</a>.
       <tr> <td><em>10:30</em></td> <td><em>Coffee break</em></td> </tr>
       <tr> <td>11:00</td> <td>Version control with Git</td> </tr>
       <tr> <td>13:00</td> <td>Lunch break</td> </tr>
-      <tr> <td>14:00</td> <td>Building programs with Python 2.7</td> </tr>
+      <tr> <td>14:00</td> <td>Building programs with Python</td> </tr>
       <tr> <td><em>15:00</em></td> <td><em>Coffee break</em></td> </tr>
-      <tr> <td>15:30</td> <td>Building programs with Python 2.7</td> </tr>
+      <tr> <td>15:30</td> <td>Building programs with Python</td> </tr>
       <tr> <td>17:00</td> <td>Close</td> </tr>
     </table>
   </div>
@@ -172,7 +172,7 @@ href="https://hackpad.com/ARCHER-SWC-Belfast-2016-PIKLfZG0cW4">this page</a>.
     </ul>
   </div>
   <div class="span6">
-    <h3>Building programs with Python 2.7</h3>
+    <h3>Building programs with Python</h3>
     <ul>
       <li>Using libraries</li>
       <li>Working with arrays</li>
@@ -232,7 +232,7 @@ href="https://hackpad.com/ARCHER-SWC-Belfast-2016-PIKLfZG0cW4">this page</a>.
 <h2>Check your setup</h2>
 
 <p>
-  To check you have the correct version of Python (2.7):
+  To check you have the correct version of Python (3):
 </p>
 <ul>
   <li>
